[gd_scene load_steps=7 format=3 uid="uid://bpuce5l5l1hkb"]

[ext_resource type="Script" uid="uid://bi6brq7gibnpk" path="res://src/UI/ClickBar/click_bar.gd" id="1_144cp"]
[ext_resource type="Script" uid="uid://bfo0etc1kk7ou" path="res://src/UI/ProgressionBar/progression_bar.gd" id="2_pkfu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pkfu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lk1iy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2xlw5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkfu1"]

[node name="ClickBar" type="Button"]
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxEmpty_pkfu1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lk1iy")
text = "Click"
script = ExtResource("1_144cp")

[node name="ProgressBar" type="ProgressBar" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_2xlw5")
theme_override_styles/fill = SubResource("StyleBoxFlat_pkfu1")
value = 50.0
show_percentage = false
script = ExtResource("2_pkfu1")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="maximum_reached" from="ProgressBar" to="." method="_on_progress_bar_maximum_reached"]
